--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: PIS
 Title: Pathway Impact Score
-Version: 0.0.0.9000
+Version: 0.1.3.9000
 Authors@R: 
-    person("Yeogha", "Yoon", email = "first.last@example.com", role = c("aut", "cre"),
+    person("Yeogha", "Yoon", email = "ygyoon17@ewhain.net", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0955-4344"))
-Description: What the package does (one paragraph).
+Description: Determine DEG thresholds by calculating the pathway level effects.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
