--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(binGenesByCntCutoff)
 export(calculatePathwayScores)
 export(createGeneRank)
+export(geneCount)
 export(getGenesByCutoffs)
 export(getPeakResults2)
+export(readGMT)
 export(scoreSmooth)
 export(theme_transparent3)
+export(writeGMT)
