--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,10 @@ Title: Pathway Impact Score
 Version: 0.3.1.9000
 Authors@R: 
     person("Yeogha", "Yoon", 
-		   email = "ygyoon17@ewhain.net", 
-		   role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0003-0955-4344"))
-Description: Determine DEG thresholds by calculating the pathway level effects.
+				  email = "ygyoon17@ewhain.net", 
+		   		role = c("aut", "cre"),
+          comment = c(ORCID = "0000-0003-0955-4344"))
+Description: Package for determining DEG thresholds by calculating the pathway level effects.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -15,10 +15,10 @@ Depends:
 	R (>= 4.1.0)
 Imports: 
 	data.table (>= 1.14.0),
-    stats,
-    utils,
+  stats,
+  utils,
 	dplyr,
-    methods,
-    ggplot2 (>= 3.3.5),
+  methods,
+  ggplot2 (>= 3.3.5),
 	parallel
 LazyData: true
